# daily_task

./: .env.example  .gitignore  README.md  delete_old_bets.py  dump_schema.sh  hello.py  main.py  pyproject.toml  pyrightconfig.json  sqlc.yaml  test.py
.github/workflows/: daily-nba-bets.yml  daily_bets.yml  daily_cbb_games.yml  daily_mlb_bets.yml  daily_mlb_es_test.yml  daily_nba_alt_bets.yml  daily_nba_bets.yml  daily_nba_games.yml  daily_nfl_bets.yml  delete-old-bets.yml  wc_analysis.yml
daily_bets/: __main__.py  bestbet_api.py  db.py  db_pool.py  env.py  errors.py  logger.py  logging-config.json  models.py  nba.py  odds_api.py  utils.py
daily_bets/analysis/: existing_bets.py  mlb.py  mlb_es_test.py  nba.py  nba_alt.py  nfl.py  wnba.py
daily_bets/db/: __init__.py  delete_old_bets.py  mlb.py  mlb_db.py  models.py  nba_alt_backup.py  nba_alt_db.py  nba_backup.py  nba_db.py  nfl_backup.py  nfl_db.py  wnba_db.py
daily_bets/mlb/: mlb.py
daily_bets/nba/: models.py  nba.py
daily_bets/nfl/: nfl.py
daily_bets/scripts/: delete_old_bets.py  generate_wc_analysis.py  sync_daily_cbb_games.py  sync_daily_nba_games.py  test_translate_es.py
daily_nfl_bets/: __main__.py  db.py  logger.py  logging-config.json  nfl.py
daily_nfl_bets/nfl/: models.py  nfl.py
queries/: cbb_game_predictions_table.sql  delete_old_bets.sql  mlb.sql  mlb_db.sql  nba_alt_db.sql  nba_db.sql  nba_game_predictions_table.sql  nfl_db.sql  wnba_db.sql
